Adding styling and cart processing with Craft Commerce

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,16 @@
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel="stylesheet" href="https://www.britbound.com/britbound.min.css?v=1.02" />
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+
 
 	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
+
+	<div id="packagebuilderapp" class="container"></div>
 </body>
 </html>
